--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Happy Birthday Smarika Pantha💕 </title>	    
+		<title>Happy Birthday Arya💕 </title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
 		<script type="text/javascript" src="./file/jquery.min.js"></script>
 		<script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -31,11 +31,12 @@
                 <div id="text">
                     <div id="code">
                       <span class="say"> Happiest Birthday  </span><br>
-                      <span class="say">Princess Smarika💕 </span><br>             
-                      <span class="say">You Know you</span><br>
-                      <span class="say">are very speical for me😍</span><br>
-                      <span class="say">i'll give you all the</span><br>
-                      <span class="say">love one can give 😘❤️ </span><br>
+                      <span class="say">Arya💕 </span><br>             
+                      <span class="say">It’s crazy how in such a short time, you’ve managed to become someone so easy to vibe with.</span><br>
+                      <span class="say">You’ve got this spark kind, funny, and full of life that just makes every moment better.</span><br>
+                      <span class="say">Keep shining bright, chasing what you love, and never stop being the amazing person you are.
+Here’s to your day being as special and vibrant as you are! 🌙💫</span><br>
+                      <span class="say">Glad the universe decided our paths should cross 🤍 </span><br>
                       <span class="say"><span class="space"></span></span> </font>
                           <br />
                           <br />
